--- a/file_lister_navigator_selector_demo/src/main/res/values/strings.xml
+++ b/file_lister_navigator_selector_demo/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="DIALOG_button_no">Нет</string>
     <string name="selection_result">Выбрано:\n%1$s</string>
     <string name="there_is_no_reading_access">Нет доступа не чтение</string>
+    <string name="BUTTON_list_dir_recursively">Прочитать выбранный каталог рекурсивно</string>
+    <string name="ERROR_single_dir_must_be_selected">Выберите один каталог</string>
+    <string name="ERROR_unknown_storage_type">Неизвестный тип хранилища: %1$s</string>
 </resources>
