--- a/lib/src/main/res/values/strings.xml
+++ b/lib/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="write_access_denied">Write access denied</string>
     <string name="internal_storage_title">Внутренняя память</string>
     <string name="external_storage_title">SD-карта</string>
+    <string name="storage_selector_spinner_prompt">Выберите хранилище</string>
 </resources>
 
 <!-- «» -->
