Добавил картинки в список выбора хранилища.

--- a/lib/src/main/res/values/strings.xml
+++ b/lib/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="internal_storage_title">Внутренняя память</string>
     <string name="external_storage_title">SD-карта</string>
     <string name="storage_selector_spinner_prompt">Выберите хранилище</string>
+    <string name="description_storage_list_storage_type_icon">Значок типа хранилища</string>
 </resources>
 
 <!-- «» -->
