Очень сложно и запутанно: признак того, что неправильно.

--- a/storage_selector/src/main/res/values/strings.xml
+++ b/storage_selector/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="dialog_title">Выбор хранилища</string>
+    <string name="dialog_title">Storage selection</string>
     <string name="cancel">Cancel</string>
 </resources>
